# crab-fs

./: CLAUDE.md  Cargo.toml  README.md  specification.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
app/: cargo.toml
app/src/: cuttlefish.rs  lib.rs  main.rs
backend/: cargo.toml
backend/src/io/fs/: encrypted_fs.rs  memory_fs.rs  mod.rs  physical.rs  remote_fs.rs
backend/tests/: integration_tests.rs
backend/tests/common/: mod.rs
common/: Cargo.toml
common/src/: entropy.rs  errors.rs  lib.rs
common/src/crypt/: feistel.rs
common/src/io/fs/: dummy.rs  fs.rs  mod.rs
manual_docker_tests/manual/pjdfstest/: Dockerfile
repository/: cargo.toml
repository/src/: lib.rs  repository_v1.rs
src/: cuttlefish.rs  entropy.rs  errors.rs  lib.rs  main.rs
src/crypt/: feistel.rs  mod.rs
src/io/: encrypted_fs.rs  fs.rs  memory_fs.rs  mod.rs
src/io/fs/: dummy.rs  encrypted_fs.rs  fs.rs  memory_fs.rs  mod.rs  physical.rs  remote_fs.rs
src/repository/: mod.rs  repository_v1.rs
tests/: cargo.toml  in_memory_tests.rs  integration_tests.rs
tests/common/: mod.rs
tests/manual/fstest/: Dockerfile  run.sh
tests/manual/pjdfstest/: run.sh
tests/src/: in_memory_tests.rs  integration_tests.rs  lib.rs
