[package]
name = "crab-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
env_logger = "0.11.5"
fuser = "0.15.0"
libc = "0.2.165"
log = "0.4.22"
serde = { version = "1.0.215", features = ["std", "derive"] }
clap = { version = "4.5.21", features = ["cargo", "derive"] }
num-traits = "0.2.19"
rand = "0.8.5"
base64 = "0.22.1"
rand_chacha = "0.3.1"
sha2 = "0.10.8"
blake3 = "1.5.4"



[build-dependencies]
pkg-config = { version = "0.3.14", optional = true }
